# simple-config-parser

./: .gitignore  pyproject.toml
scripts/: requirements-dev.txt
simple_config_parser/: simple_config_parser.py
src/simple_config_parser/: constants.py  simple_config_parser.py
tests/: Test SimpleConfigParser.run.xml  klipper_config.txt  test_line_parsing.py  test_line_type_detection.py
tests/features/internal_state/: test_internal_state_changes.py
tests/features/line_parsing/: test_line_parsing.py
tests/features/line_parsing/data/: case_parse_option.py  test_parse_invalid_section.py
tests/features/line_type_detection/: test_line_type_detection.py
tests/features/line_type_detection/data/: case_line_is_option.py  test_line_is_multiline_option.py
tests/features/public_api/: test_public_api.py
tests/line_matching/match_option/test_data/: non_matching_data.txt
tests/line_matching/match_section/: test_match_section.py
tests/line_matching/match_section/test_data/: non_matching_data.txt
tests/line_parsing/: test_line_parsing.py
tests/line_parsing/test_data/: test_config.cfg
tests/public_api/: test_get_options.py  test_get_sections.py  test_options_api.py  test_sections_api.py  test_write_file.py
